fix: calendar now working on mobile, tablet and laptop properly fix: navbar always having a white background fix: button now have a cursor pointer fix: button now have a border on hover if no background

--- a/src/app/components/button/button.component.css
+++ b/src/app/components/button/button.component.css
@@ -12,6 +12,7 @@
   font-size: 14px;
   text-align: center;
   transition: all 0.3s;
+  cursor: pointer;
 }
 
 .btn-primary {
@@ -22,7 +23,6 @@
 
 .btn-primary:hover {
   background-color: var(--white);
-  border-color: var(--white);
   color: var(--blue);
 }
 
@@ -34,7 +34,6 @@
 
 .btn-secondary:hover {
   background-color: var(--white);
-  border-color: var(--white);
   color: var(--red);
 }
 
