--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -2,6 +2,7 @@ nav {
   text-decoration: none;
   border-bottom: solid 1px var(--blue);
   background-color: var(--white);
+  z-index: 2;
 }
 
 ul {
